--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <p class="padding-bottom-15">Ecco la tua Password personalizzata:</p>
             <h2 id="password" class="padding-bottom-15"></h2>
             <p>** Ti ricordiamo che questa password ha un livello basso di sicurezza. Di conseguanza cambiala regolarmente! **</p>
-
         </div>
         
+        <!-- JAVASCRIPT -->
+
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
